--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Percentage Calculator</title>
 </head>
-<body>
+<body> 
     <div class="card">
-        <h1 style="text-align: center;font-size: 30px;color: white;font-family: sans-serif;">MCE Student Percentage Calculator</h1>
+        <h1 style="text-align: center;font-size: 30px;color: white;font-family: sans-serif;">Student Percentage Calculator</h1>
         <p style="text-align: center;font-size: 15px;color: white;font-family: sans-serif;"><b>Enter Marks between 0 to 100</b></p>
         <input type="text" id="IS701" placeholder="IS701" /><br><br>
         <input type="text" id="IS702" placeholder="IS702" /><br><br>
