index.js changed

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <div class="card">
         <h1 style="text-align: center;font-size: 30px;color: white;font-family: sans-serif;">Student Percentage Calculator</h1>
         <p style="text-align: center;font-size: 15px;color: white;font-family: sans-serif;"><b>Enter Marks between 0 to 100</b></p>
-        <input type="text" id="IS701" placeholder="IS701" /><br><br>
-        <input type="text" id="IS702" placeholder="IS702" /><br><br>
-        <input type="text" id="IS703" placeholder="IS703" /><br><br>
-        <input type="text" id="IS704" placeholder="IS704" /><br><br>
-        <input type="text" id="IS705" placeholder="IS705" /><br><br>
-        <input type="text" id="IS706" placeholder="IS706"/><br><br>
+        <input type="text" id="IS701" placeholder="Kannada" /><br><br>
+        <input type="text" id="IS702" placeholder="English" /><br><br>
+        <input type="text" id="IS703" placeholder="Hindi" /><br><br>
+        <input type="text" id="IS704" placeholder="Mathematics" /><br><br>
+        <input type="text" id="IS705" placeholder="Science" /><br><br>
+        <input type="text" id="IS706" placeholder="Social Science"/><br><br>
         <button onclick="publishResult()">View Result</button>
     </div>
     <div class="result">
