--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body> 
     <div class="card">
         <h1 style="text-align: center;font-size: 30px;color: white;font-family: sans-serif;">Student Percentage Calculator</h1>
+        <pre>                                                                                                                </pre>
         <p style="text-align: center;font-size: 15px;color: white;font-family: sans-serif;"><b>Enter Marks between 0 to 100</b></p>
         <input type="text" id="IS701" placeholder="Kannada" /><br><br>
         <input type="text" id="IS702" placeholder="English" /><br><br>
